# Video-Understanding-MVP

./: .cursorrules  .env_example  .gitignore  .gitmodules  README.md  benchmark.py  config.toml  config_benchmark.toml  config_sota_validation.toml  main.py  pyproject.toml  run_benchmark.py  run_ollama_benchmark.py
QA/dissertation_model_selection_and_validation/: generate_charts.py  实验报告_模型选型与评估框架验证.md  附录A_评分标准与完整Rubric.md  附录B_问答示例详情.md  附录C_完整数据表.md
QA/v2/: 01_实验分析_模型选型.md
QA/week2/: 02_实验设计自省.md  03_组会汇报指南.md  04_组会展示稿.md
assets/images/: 02_Minecraft.json  03_GenshinImpact.json  04_GenshinImpact.json
blueprint/: project_context.md  综合实验设计.md  综合实验设计_v2.md  综合实验设计_v3.md  项目升级计划.md  项目升级计划_草稿.md
blueprint/v1/: 综合实验设计_v1.md
blueprint/v3-GameScene-Eval/: SOTA模型验证实验设计.md  升级说明.md  实验指南.md  实验设计.md
experiments/benchmark_quality/: README.md  benchmark.py
experiments/benchmark_speed/: README.md  benchmark.py
experiments/gameplay_analysis/: README.md  (+1 more)
pipeline/: __init__.py  capture.py  config.py  models.py  queue_manager.py  runner.py  summarizer.py  vlm.py
prompts/: deepseek_prompt.md  vlm_prompt.md
reports/: comparison_report.md
templates/: final_report.md  incident_report.md  quality_comparison.md  readme.md  speed_comparison.md  video_comparison.md
tests/: test_capture.py  test_config.py  test_queue_manager.py  test_summarizer.py  test_toolkit.py  test_vlm.py
toolkit/: __init__.py  common.py  gameplay_analysis.py  visualization.py  vllm_manager.py
utils/: README.md  __init__.py  csv_io.py  logging.py  reporting.py  vllm_manager.py
(+300 files in other folders)
