[project]
name = "video-understanding-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ahu-paimon-toolkit>=0.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mss>=10.1.0",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
