[project]
name = "video-understanding-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ahu-paimon-toolkit",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "mss>=10.1.0",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "opencv-python-headless>=4.13.0.92",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pywin32>=311",
    "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
ahu-paimon-toolkit = { path = "ahu_paimon_toolkit", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
